--- a/SimpleMapExample/SimpleMapExample/SupportingFiles/Info.plist
+++ b/SimpleMapExample/SimpleMapExample/SupportingFiles/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Please allow the app use your current location to show best options in your area </string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please allow the app use your current location to show best options in your area </string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
